name:                advent-of-code
version:             0.1.0.0
synopsis:            Solutions to Advent of Code 2017
homepage:            https://github.com/bward/advent-of-code#readme
license:             BSD3
license-file:        LICENSE
author:              Ben Ward
maintainer:          bw@ben-ward.net
copyright:           2017 Ben Ward
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- To avoid duplicated efforts in documentation and dealing with the
-- complications of embedding Haddock markup inside cabal files, it is
-- common to point users to the README.md file.
description:         Please see the README on Github at <https://github.com/bward/advent-of-code#readme>

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , split
                     , vector
                     , array
                     , containers
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/advent-of-code
